// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`recursiveFetchImports should follow dynamic renames in imports 1`] = `
[
  {
    "children": [
      {
        "children": [
          {
            "children": [],
            "data": {
              "tag": "String",
              "value": "test exit",
            },
          },
        ],
        "data": {
          "from": "testNonImportTwo",
          "key": "testNonImportTwo#testImportTwo",
          "name": "test exit",
          "tag": "Exit",
          "to": "testImportTwo",
        },
      },
    ],
    "data": {
      "from": undefined,
      "key": "testNonImportTwo",
      "tag": "Room",
      "x": undefined,
      "y": undefined,
    },
  },
]
`;

exports[`recursiveFetchImports should import multilevel and avoid colliding stub names 1`] = `
[
  {
    "children": [
      {
        "children": [
          {
            "children": [],
            "data": {
              "tag": "String",
              "value": "test exit",
            },
          },
        ],
        "data": {
          "from": "basicOne",
          "key": "basicOne#stub",
          "name": "test exit",
          "tag": "Exit",
          "to": "stub",
        },
      },
    ],
    "data": {
      "from": undefined,
      "key": "basicOne",
      "tag": "Room",
      "x": undefined,
      "y": undefined,
    },
  },
  {
    "children": [
      {
        "children": [
          {
            "children": [],
            "data": {
              "tag": "String",
              "value": "Asset Two",
            },
          },
        ],
        "data": {
          "tag": "Description",
        },
      },
      {
        "children": [
          {
            "children": [],
            "data": {
              "tag": "String",
              "value": "test exit",
            },
          },
        ],
        "data": {
          "from": "basic",
          "key": "basic#stub",
          "name": "test exit",
          "tag": "Exit",
          "to": "stub",
        },
      },
    ],
    "data": {
      "from": undefined,
      "key": "basic",
      "tag": "Room",
      "x": undefined,
      "y": undefined,
    },
  },
  {
    "children": [],
    "data": {
      "from": undefined,
      "key": "testImportThree",
      "tag": "Room",
      "x": undefined,
      "y": undefined,
    },
  },
]
`;

exports[`recursiveFetchImports should properly stub out features in room description 1`] = `
[
  {
    "children": [
      {
        "children": [
          {
            "children": [
              {
                "children": [],
                "data": {
                  "tag": "String",
                  "value": "Test",
                },
              },
            ],
            "data": {
              "tag": "Link",
              "text": "Test",
              "to": "testFeature",
            },
          },
        ],
        "data": {
          "tag": "Description",
        },
      },
    ],
    "data": {
      "from": undefined,
      "key": "testRoomWithFeatures",
      "tag": "Room",
      "x": undefined,
      "y": undefined,
    },
  },
  {
    "children": [],
    "data": {
      "from": undefined,
      "key": "testRoomWithFeatures",
      "tag": "Room",
    },
  },
]
`;

exports[`recursiveFetchImports should recursive fetch one level of element and stubs when passed import key 1`] = `
[
  {
    "children": [
      {
        "children": [
          {
            "children": [],
            "data": {
              "tag": "String",
              "value": "One",
            },
          },
        ],
        "data": {
          "tag": "Description",
        },
      },
    ],
    "data": {
      "from": undefined,
      "key": "testImportOne",
      "tag": "Room",
      "x": undefined,
      "y": undefined,
    },
  },
  {
    "children": [
      {
        "children": [
          {
            "children": [],
            "data": {
              "tag": "String",
              "value": "Two",
            },
          },
        ],
        "data": {
          "tag": "Description",
        },
      },
      {
        "children": [
          {
            "children": [],
            "data": {
              "tag": "String",
              "value": "test exit one",
            },
          },
        ],
        "data": {
          "from": "testImportOne",
          "key": "testImportOne#testImportStubOne",
          "name": "test exit one",
          "tag": "Exit",
          "to": "testImportStubOne",
        },
      },
    ],
    "data": {
      "from": undefined,
      "key": "testImportOne",
      "tag": "Room",
      "x": undefined,
      "y": undefined,
    },
  },
]
`;

exports[`recursiveFetchImports should return element and stubs when passed non-import key 1`] = `
[
  {
    "children": [
      {
        "children": [
          {
            "children": [],
            "data": {
              "tag": "String",
              "value": "DescriptionOne",
            },
          },
        ],
        "data": {
          "tag": "Description",
        },
      },
      {
        "children": [
          {
            "children": [],
            "data": {
              "tag": "String",
              "value": "test exit",
            },
          },
        ],
        "data": {
          "from": "testNonImport",
          "key": "testNonImport#testNonImportStub",
          "name": "test exit",
          "tag": "Exit",
          "to": "testNonImportStub",
        },
      },
    ],
    "data": {
      "from": undefined,
      "key": "testNonImport",
      "tag": "Room",
      "x": undefined,
      "y": undefined,
    },
  },
]
`;
